project for pre defense
